# flowst

./: .gitignore  .prettierignore  CHANGELOG.md  README.md  eslint.config.js  index.html  kill-dev.bat  package-lock.json  package.json  vite.config.ts
.agents/: AGENTS.md  PLAN.md
.agents/rules/: architecture.md  logging.md  versioning.md
.husky/: pre-commit  pre-push
scripts/: build.ps1  build.sh  pre-push.js  release.js
src/: App.css  App.tsx  MainView.tsx  MiniView.tsx  SettingsView.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  settings.rs  sys.rs  window.rs
src/components/: ClockPane.tsx  ContributionGrid.tsx  CustomSelect.tsx  DashboardWindow.tsx  DebugWindow.tsx  MainWindow.tsx  MiniWindow.tsx  SettingsPane.tsx  TitleBar.tsx  WheelPicker.tsx
src/components/dashboard/: DashboardChart.tsx  DashboardGrid.tsx  DashboardStats.tsx
src/features/dashboard/: Dashboard.tsx
src/features/debug/: DebugPanel.tsx
src/features/settings/: ExportImport.tsx
src/hooks/: useWindowDrag.ts
src/lib/: log.ts
src/lib/pomodoro/: autoSplit.ts
src/stores/: debugStore.ts  pomodoroStore.ts  storage.ts
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/: llms.txt  privacy.html  robots.txt  sitemap.xml
web/src/: App.tsx  index.css  tauri-mock.ts
web/src/components/: ContributionGrid.tsx  CustomSelect.tsx  DashboardWindow.tsx  DebugWindow.tsx  MainWindow.tsx  SettingsPane.tsx  TitleBar.tsx  (+1 more)
(+6 files in other folders)
